# uipath_simcity_enterprise

./: .gitignore  README.md  package-lock.json  package.json  render.yaml
_uipath_build/: build_all.py  build_scenario_processes.py  build_separate_agents.py  fix_layouts.py
_uipath_build/PipelineTest/: Main.xaml  project.json
_uipath_build/PipelineTest/.local/: AllDependencies.json  MaestroCity_PipelineTest.nuget.props  PackageCache.json  WorkflowFileValidator.cache  nuget.cache
_uipath_build/PipelineTest/.project/: PackageBindingsMetadata.json
_uipath_build/coded_agents/: agents.py  apex.mermaid  entry-points.json  langgraph.json  main.py  project.uiproj  pyproject.toml  uipath.json
_uipath_build/coding_gen/: coding_gen.mermaid  entry-points.json  langgraph.json  main.py  project.uiproj  pyproject.toml  uipath.json
_uipath_build/maestro_orchestrator/: entry-points.json  langgraph.json  maestro_case.mermaid  main.py  project.uiproj  pyproject.toml  uipath.json
_uipath_build/maestro_orchestrator/__uipath/: state.db
_uipath_build/scenario_gen/: entry-points.json  langgraph.json  main.py  project.uiproj  pyproject.toml  scenario_gen.mermaid  uipath.json
apps/backend/: .env.example  _publish_experiment.py  main.py  railway.json  requirements.txt
apps/backend/agents/: base_agent.py  (+5 more)
apps/frontend/: .env.example  next.config.js  package.json  tailwind.config.ts  tsconfig.json
docs/: AGENT_BUILDER_SETUP.md  AGENT_BUILDER_SPEC.md  CODING_AGENT.md  README.md  UIPATH_INTEGRATION.md  UIPATH_PLATFORM_SETUP.md  caseagentssetup.md
docs/images/: architecture.mmd
(+85 files in other folders)
